# HelloTest

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FILES_CHECKLIST.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  cli.py  config.py  deploy_to_github.py  example.js  logger.py  main.py  package.json  pyproject.toml  requirements.txt  run_tests.py  setup_repo.py  test_main.py  test_utils.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflow/: lint.yml
docs/: MATERIAL_INFO.md  USAGE.md
src/utils/: math_ops.py
tests/: verify_math.py
